<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/keyboard_background"
    tools:context=".Keyboard">

    <RelativeLayout
        android:id="@+id/controlsLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/scriptButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_above="@id/writeButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/normal"
            android:text="@string/script"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/writeButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:background="@drawable/normal_record"
            android:text="@string/write"
            android:textSize="35sp"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/enterButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/writeButton"
            android:layout_marginEnd="25dp"
            android:layout_toStartOf="@id/writeButton"
            android:background="@drawable/normal"
            android:text="@string/enter"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/spaceButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/writeButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/normal"
            android:text="@string/space"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/backspaceButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/writeButton"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@id/writeButton"
            android:background="@drawable/normal"
            android:text="@string/backspace"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/recordingLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/recordButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:background="@drawable/normal"
            android:text="@string/back"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/recordButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:background="@drawable/normal_record"
            android:text="@string/record"
            android:textSize="35sp"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lettersLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/backButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/top1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/normal"
            android:text="@string/back"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/top4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/top1"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/top1"
            android:background="@drawable/normal"
            android:text="@string/top4"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/top1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/normal"
            android:text="@string/top1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/top2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/top1"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/top1"
            android:background="@drawable/normal"
            android:text="@string/top2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/top3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/top1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/normal"
            android:text="@string/top3"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>